# FreeNotes

./: CMakeLists.txt  FileHandler.cpp  FileHandler.h  MenuBar.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
